# runfile

./: .editorconfig  .gitignore  .publisher.json  CLAUDE.md  Cargo.toml  README.md  Runfile-ci.json  Runfile-wsl.json  Runfile.json  dist-workspace.toml  rustfmt.toml
.githooks/: pre-commit  pre-push
.github/: DOCS.md
.github/actions/setup/: action.yml
.github/release-assets/: install.ps1  install.sh
.github/workflows/: audit.yml  ci.yml  publish-npm.yml  release.yml
crates/runfile-cli/: Cargo.toml
crates/runfile-cli/src/: agent_detect.rs  ci_detect.rs  cmd_config.rs  cmd_env.rs  cmd_mcp.rs  cmd_run.rs  cmd_update.rs  cmd_utilities.rs  completions.rs  main.rs  runfile_helpers.rs  shell.rs  tests.rs
crates/runfile-cli/src/cmd_env/: crypt.rs  mod.rs  secret_keys.rs
crates/runfile-cli/src/tests/: ci_detect.rs  cli_parse.rs  cmd_env.rs  cmd_run.rs  cmd_update.rs  cmd_utilities.rs  completion_refs.rs  completions.rs  env_file_target.rs  mod.rs  runfile_target.rs
crates/runfile-cli/tests/: generate_and_write_cli.rs
crates/runfile-converters/: Cargo.toml
crates/runfile-converters/src/: makefile.rs  package_json.rs
crates/runfile-converters/src/tests/: makefile.rs
crates/runfile-crypto/: Cargo.toml
crates/runfile-crypto/src/: lib.rs
crates/runfile-env/: Cargo.toml
crates/runfile-env/src/: lib.rs  parse.rs  tests.rs
crates/runfile-env/src/tests/: mod.rs  parse.rs
crates/runfile-executor/: Cargo.toml
crates/runfile-executor/src/: args.rs  control_flow.rs  dsl_eval.rs  env.rs  executor.rs  extract.rs  force_kill.rs  functions.rs  lib.rs  logging.rs  parallel.rs  parallel_output.rs  runner.rs  stdio_tailer.rs  tests.rs
crates/runfile-executor/src/tests/: control_flow_match_parallel.rs  declared_vars.rs  empty_command_skip.rs  escape_parallel_tests.rs  extract_tests.rs  force_kill.rs  functions.rs  logging.rs  mod.rs  parallel_output.rs  runtime_when_targetcall.rs  shell_quoting_tests.rs  stdin_args.rs  stdio_tailer.rs
crates/runfile-generators/: Cargo.toml
crates/runfile-generators/src/: editorconfig.rs  jetbrains.rs  lib.rs  tests.rs  vscode.rs  zed.rs
crates/runfile-generators/src/tests/: coverage.rs  editorconfig.rs  jetbrains.rs  mod.rs  vscode.rs  zed.rs
crates/runfile-mcp/: Cargo.toml
crates/runfile-mcp/src/: install.rs  lib.rs  server.rs  tests.rs  tools.rs
crates/runfile-mcp/src/tests/: mod.rs
crates/runfile-parser/: Cargo.toml
crates/runfile-parser/src/: dsl.rs  merge.rs  parse.rs  schema.rs  tests.rs
crates/runfile-parser/src/tests/: dsl.rs  mod.rs  parsing.rs
crates/runfile-settings/: Cargo.toml
crates/runfile-settings/src/: keyring_keys.rs  paths.rs
crates/runfile-settings/src/tests/: keyring_keys.rs  mod.rs
crates/runfile-shell/: Cargo.toml
npm/: package.json  run.js
schemas/: v0.schema.json
scripts/: build-npm-packages.mjs  build-npm-packages.mts  install.ps1
