[workspace]
members = [
	"crates/runfile-parser",
	"crates/runfile-shell",
	"crates/runfile-settings",
	"crates/runfile-env",
	"crates/runfile-crypto",
	"crates/runfile-executor",
	"crates/runfile-converters",
	"crates/runfile-generators",
	"crates/runfile-mcp",
	"crates/runfile-cli",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
rust-version = "1.94.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Skiley/runfile"
homepage = "https://github.com/Skiley/runfile"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "1"
thiserror = "2"
dirs = "6"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
which = "8"
keyring = { version = "3", default-features = false }
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
globset = "0.4"
shlex = "1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = "z"
strip = true
