[workspace]
members = [
	"crates/runfile-parser",
	"crates/runfile-shell",
	"crates/runfile-settings",
	"crates/runfile-env",
	"crates/runfile-crypto",
	"crates/runfile-executor",
	"crates/runfile-converters",
	"crates/runfile-generators",
	"crates/runfile-mcp",
	"crates/runfile-cli",
]
resolver = "2"

[workspace.package]
version = "0.15.0"
rust-version = "1.94.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Skiley/runfile"
homepage = "https://github.com/Skiley/runfile"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
json5 = "1.3.1"
thiserror = "2.0.18"
dirs = "6.0.0"
clap = { version = "4.6.1", features = ["derive"] }
tempfile = "3.27.0"
which = "8.0.2"
keyring-core = "1.0.0"
linux-keyutils-keyring-store = "1.0.0"
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
windows-native-keyring-store = "1.0.0"
notify = { version = "8.2.0", default-features = false, features = ["macos_fsevent"] }
globset = "0.4.18"
shlex = "1.3.0"
regex = "1.12.3"
aes-gcm = "0.10.3"
base64 = "0.22.1"
hex = "0.4.3"
sha2 = "0.11.0"
md-5 = "0.11.0"
subtle = "2.6.1"
zeroize = "1.8.2"
libc = "0.2.186"
windows-sys = { version = "0.61.2", features = ["Win32_System_Console", "Win32_Foundation", "Win32_System_JobObjects", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO"] }
tokio = { version = "1.52.2", features = ["full"] }
rmcp = { version = "1.6.0", features = ["server", "transport-io", "macros"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = "z"
strip = true
