[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = "https://github.com/JoaaoVerona/runfile"
license = "MIT"
repository = "https://github.com/JoaaoVerona/runfile"
rust-version = "1.94.1"
version = "0.39.1"

[workspace.dependencies]
aes-gcm = "=0.10.3"
apple-native-keyring-store = { features = ["keychain"], version = "=1.0.0" }
base64 = "=0.22.1"
clap = { features = ["derive"], version = "=4.6.1" }
dirs = "=6.0.0"
globset = "=0.4.18"
hex = "=0.4.3"
json5 = "=1.3.1"
keyring-core = "=1.0.0"
libc = "=0.2.186"
linux-keyutils-keyring-store = "=1.0.0"
md-5 = "=0.11.0"
notify = { default-features = false, features = ["macos_fsevent"], version = "=8.2.0" }
regex = "=1.12.3"
rmcp = { features = ["macros", "server", "transport-io"], version = "=1.6.0" }
runfile-converters = { path = "crates/runfile-converters" }
runfile-crypto = { path = "crates/runfile-crypto" }
runfile-env = { path = "crates/runfile-env" }
runfile-executor = { path = "crates/runfile-executor" }
runfile-generators = { path = "crates/runfile-generators" }
runfile-mcp = { path = "crates/runfile-mcp" }
runfile-parser = { path = "crates/runfile-parser" }
runfile-settings = { path = "crates/runfile-settings" }
runfile-shell = { path = "crates/runfile-shell" }
secret-service = { default-features = false, features = ["rt-async-io-crypto-rust"], version = "=5.1.0" }
serde = { features = ["derive"], version = "=1.0.228" }
serde_json = "=1.0.149"
sha2 = "=0.11.0"
shlex = "=1.3.0"
subtle = "=2.6.1"
tempfile = "=3.27.0"
thiserror = "=2.0.18"
tokio = { features = ["full"], version = "=1.52.2" }
which = "=8.0.2"
windows-native-keyring-store = "=1.0.0"
windows-sys = { features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_IO", "Win32_System_JobObjects"], version = "=0.61.2" }
zeroize = "=1.8.2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
