[package]
name = "runfile-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runfile CLI — an easy-to-use, batteries-included task runner"

[[bin]]
name = "run"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
runfile-parser = { path = "../runfile-parser" }
runfile-shell = { path = "../runfile-shell" }
runfile-settings = { path = "../runfile-settings" }
runfile-crypto = { path = "../runfile-crypto" }
hex = { workspace = true }
runfile-env = { path = "../runfile-env" }
runfile-executor = { path = "../runfile-executor" }
runfile-converters = { path = "../runfile-converters" }
runfile-generators = { path = "../runfile-generators" }
runfile-mcp = { path = "../runfile-mcp" }
tokio = { workspace = true }
notify = { workspace = true }
globset = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
