[package]
default-run = "run"
description = "Runfile CLI — an easy-to-use, batteries-included task runner"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "runfile-cli"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "run"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dirs.workspace = true
globset.workspace = true
hex.workspace = true
notify.workspace = true
runfile-converters.workspace = true
runfile-crypto.workspace = true
runfile-env.workspace = true
runfile-executor.workspace = true
runfile-generators.workspace = true
runfile-mcp.workspace = true
runfile-parser.workspace = true
runfile-settings.workspace = true
runfile-shell.workspace = true
serde_json.workspace = true
tokio.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
