[package]
description = "Converters from other formats (package.json, Makefile) to Runfile.json"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "runfile-converters"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
runfile-parser.workspace = true
serde_json.workspace = true
