[package]
name = "runfile-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Encryption/decryption utilities for Runfile encrypted environment variables"

[dependencies]
aes-gcm = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
