[package]
description = "Encryption/decryption utilities for Runfile encrypted environment variables"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "runfile-crypto"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
hex.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
zeroize.workspace = true
