[package]
description = "Environment variable building for Runfile"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "runfile-env"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
runfile-crypto.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
