[package]
name = "runfile-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command execution engine for Runfile"

[dependencies]
base64 = "0.22"
dirs = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
thiserror = { workspace = true }
runfile-env = { path = "../runfile-env" }
runfile-parser = { path = "../runfile-parser" }
runfile-shell = { path = "../runfile-shell" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console", "Win32_Foundation", "Win32_System_JobObjects", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
runfile-crypto = { path = "../runfile-crypto" }
tempfile = { workspace = true }
