[package]
name = "runfile-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command execution engine for Runfile"

[dependencies]
base64 = { workspace = true }
dirs = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
thiserror = { workspace = true }
runfile-env = { path = "../runfile-env" }
runfile-parser = { path = "../runfile-parser" }
runfile-shell = { path = "../runfile-shell" }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
runfile-crypto = { path = "../runfile-crypto" }
tempfile = { workspace = true }
