[package]
name = "runfile-generators"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Editor integration generators (Zed tasks, JetBrains run configurations) for Runfile"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
runfile-parser = { path = "../runfile-parser" }

[dev-dependencies]
tempfile = { workspace = true }
