[package]
description = "Editor integration generators (Zed tasks, JetBrains run configurations) for Runfile"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "runfile-generators"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
runfile-parser.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
