[package]
name = "runfile-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server for Runfile"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
runfile-parser = { path = "../runfile-parser" }

[dev-dependencies]
tempfile = { workspace = true }
