[package]
description = "MCP (Model Context Protocol) server for Runfile"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "runfile-mcp"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rmcp.workspace = true
runfile-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
