[package]
description = "Runfile.json discovery and parsing"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "runfile-parser"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
json5.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
