[package]
description = "Local settings management for Runfile"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "runfile-settings"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
dirs.workspace = true
json5.workspace = true
keyring-core.workspace = true
runfile-crypto.workspace = true
runfile-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store.workspace = true
secret-service.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store.workspace = true
